# hexagonal-architecture

./: .gitignore  hello.py  pyproject.toml
src/: __main__.py
src/adapters/inbound/cli/: __init__.py  dependencies.py  users.py
src/adapters/inbound/restapi/: __init__.py  dependencies.py  users.py
src/adapters/outbound/: user_repository.py
src/domain/models/: user.py
src/domain/ports/: user_repository.py
src/domain/services/: user_service.py
tests/: conftest.py
tests/adapters/inbound/cli/: test_users.py
tests/adapters/inbound/restapi/: test_users.py
tests/adapters/outbound/: test_user_repository.py
tests/domain/services/: test_user_service.py
