[project]
name = "hexa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.8",
    "elasticsearch>=8.16.0",
    "fastapi>=0.115.5",
    "httpx>=0.28.0",
    "pydantic>=2.10.2",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]

